--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "stage": "bash scripts/stage.sh",
+    "deploy": "bash scripts/deploy.sh"
   },
   "dependencies": {
     "vue": "^2.5.17"
