--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "deploy": "bash scripts/deploy.sh"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "fusioncharts": "^3.13.3-sr.1",
+    "highcharts": "^7.0.1",
+    "highcharts-vue": "^1.2.0",
+    "vue": "^2.5.17",
+    "vue-fusioncharts": "^2.0.4",
+    "vue-router": "^3.0.2",
+    "vue2-highcharts": "^1.2.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
